@@ -1,5 +1,8 @@
 Release Notes
 
+* 1/18/2019
+  * checking batchID in updateJob
+
 * 12/21/2018
   * to reduce attempts for esmerge
 
